[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
]

[project]
name = "snap-helpers"
description = "Helpers for interacting with the Snap system within a Snap"
readme = "README.rst"
keywords = [
  "snap",
  "snapcraft",
  "snappy",
]
license = {file = "LICENSE.txt"}
maintainers = [
    {name = "Alberto Donato", email = "alberto.donato@gmail.com"},
]
authors = [
    {name = "Alberto Donato", email = "alberto.donato@gmail.com"},
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: System :: Archiving :: Packaging",
  "Topic :: System :: Software Distribution",
]
dynamic = [
  "version",
]
dependencies = [
  'importlib-metadata; python_version < "3.10"',
  "PyYAML",
]
[project.optional-dependencies]
testing = [
  "pytest",
  "pytest-mock",
]
[project.urls]
changelog = "https://github.com/albertodonato/snap-helpers/blob/main/CHANGES.rst"
documentation = "https://readthedocs.org/projects/snap-helpers/"
homepage = "https://github.com/albertodonato/snap-helpers"
repository = "https://github.com/albertodonato/snap-helpers"
[project.scripts]
snap-helpers = "snaphelpers.scripts.snap_helpers:script"

[tool.setuptools.packages.find]
include = ["snaphelpers*"]

[tool.setuptools.package-data]
snaphelpers = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "snaphelpers.__version__"}

[tool.black]
line-length = 79

[tool.isort]
combine_as_imports = true
force_grid_wrap = 2
force_sort_within_sections = true
from_first = false
include_trailing_comma = true
multi_line_output = 3
order_by_type = false
profile = "black"
use_parentheses = true

[tool.flake8]
ignore = ["E203", "E501", "W503"]
max-line-length = 80
select = ["C", "E", "F", "W", "B", "B950"]

[tool.coverage.report]
fail_under = 100.0
show_missing = true
skip_covered = true

[tool.coverage.run]
source = ["snaphelpers"]
omit = ["snaphelpers/_importlib.py"]

[tool.mypy]
ignore_missing_imports = true
install_types = true
non_interactive = true
strict = true
