[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
]

[project]
name = "testapp"
version = "1.0"
dependencies = [
  "snap-helpers",
]
[project.scripts]
service1 = "testapp:service1"
service2 = "testapp:service2"
[project.entry-points."snaphelpers.hooks"]
configure = "testapp:configure_hook"
install = "testapp:install_hook"
