[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
]

[project]
name = "testapp"
version = "1.0"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "snap-helpers",
]
scripts.service1 = "testapp:service1"
scripts.service2 = "testapp:service2"
entry-points."snaphelpers.hooks".configure = "testapp:configure_hook"
entry-points."snaphelpers.hooks".install = "testapp:install_hook"
