[metadata]
name = testapp
version = 1.0

[options]
install_requires =
    snap-helpers
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    service1 = testapp:service1
    service2 = testapp:service2

snaphelpers.hooks =
    configure = testapp:configure_hook
    install = testapp:install_hook
